Fix constants